--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "mongodb": "^3.6.9",
+    "mongodb-client-encryption": "^1.2.5",
+    "mongoose": "^5.12.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -44,5 +49,18 @@
     "node-sass": "^5.0.0",
     "node-sass-chokidar": "^1.5.0",
     "npm-run-all": "^4.1.5"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AlejandroLuna98/GISICREACT.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/AlejandroLuna98/GISICREACT/issues"
+  },
+  "homepage": "https://github.com/AlejandroLuna98/GISICREACT#readme"
 }
